--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -8,12 +8,13 @@
 
   <title>blinddichten</title>
 
-  <link rel='icon' type='image/png' href='/favicon.png'>
-  <link rel='stylesheet' href='/paper.css'>
-  <link rel='stylesheet' href='/global.css'>
-  <link rel='stylesheet' href='/build/bundle.css'>
+  <link rel='icon' href='favicon.ico'>
+  <link rel='shortcut icon' href='img/appicon.png' sizes='192x192'>
+  <link rel='stylesheet' href='paper.css'>
+  <link rel='stylesheet' href='global.css'>
+  <link rel='stylesheet' href='build/bundle.css'>
 
-  <script defer src='/build/bundle.js'></script>
+  <script defer src='build/bundle.js'></script>
 </head>
 
 <body>
