--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -13,6 +13,7 @@
   <link rel='stylesheet' href='paper.css'>
   <link rel='stylesheet' href='global.css'>
   <link rel='stylesheet' href='build/bundle.css'>
+  <link rel='stylesheet' href='darkmode.css' id="dark-mode-css">
 
   <script defer src='build/bundle.js'></script>
 </head>
